add saml (3)